Bijayini | fix z-index issue in left panel of observation template

--- a/ui/app/styles/clinical/_observations.scss
+++ b/ui/app/styles/clinical/_observations.scss
@@ -544,7 +544,7 @@ concept-set {
       background:$white;
       overflow-y:auto;
       overflow-x: hidden;
-      z-index: 9999999999;
+      z-index: 9999999;
     }
     .multi-select-lab-tests{
       width: 100% !important;
